Add option to draw a light border around tab widgets, as opposed to 3d look.

--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -1189,7 +1189,15 @@ None - no buttons, only the slider</string>
                             <cstring>tabMouseOver</cstring>
                         </property>
                     </widget>
-                    <spacer row="4" column="1">
+                    <widget class="QCheckBox" row="3" column="0">
+                        <property name="name">
+                            <cstring>roundAllTabs</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Round all tabs</string>
+                        </property>
+                    </widget>
+                    <spacer row="5" column="1">
                         <property name="name">
                             <cstring>spacer23</cstring>
                         </property>
@@ -1202,16 +1210,16 @@ None - no buttons, only the slider</string>
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>390</height>
+                                <height>418</height>
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QCheckBox" row="3" column="0">
+                    <widget class="QCheckBox" row="4" column="0">
                         <property name="name">
-                            <cstring>roundAllTabs</cstring>
+                            <cstring>borderTab</cstring>
                         </property>
                         <property name="text">
-                            <string>Round all tabs</string>
+                            <string>Draw a light border around tab widget</string>
                         </property>
                     </widget>
                 </grid>
@@ -2344,6 +2352,8 @@ None - no buttons, only the slider</string>
         </widget>
     </grid>
 </widget>
+<customwidgets>
+</customwidgets>
 <connections>
     <connection>
         <sender>framelessGroupBoxes</sender>
@@ -2428,6 +2438,7 @@ None - no buttons, only the slider</string>
     <tabstop>tabAppearance</tabstop>
     <tabstop>tabMouseOver</tabstop>
     <tabstop>roundAllTabs</tabstop>
+    <tabstop>borderTab</tabstop>
     <tabstop>shadeCheckRadio</tabstop>
     <tabstop>customCheckRadioColor</tabstop>
     <tabstop>xCheck</tabstop>
@@ -2488,24 +2499,15 @@ None - no buttons, only the slider</string>
 </tabstops>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>kpushbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
-    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>knuminput.h</includehint>
-    <includehint>knuminput.h</includehint>
     <includehint>kcolorbutton.h</includehint>
-    <includehint>knuminput.h</includehint>
-    <includehint>knuminput.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
